--- a/the-pulse/posts/2025/08/04/AI-in-Bus-Review.qmd
+++ b/the-pulse/posts/2025/08/04/AI-in-Bus-Review.qmd
@@ -10,7 +10,7 @@ categories:
 date: 08/04/2025
 toc: true
 image: Images/bookcover.jpg
-image-alt: An image of the front cover of AI in Business: Towards the Autonomous Enterprise 
+image-alt: An image of the front cover of the book AI in Business: Towards the Autonomous Enterprise 
 ---
 <center>As AI continues to reshape industries, business leaders are increasingly seeking guidance on how to harness its potential responsibly and effectively. Keeping abreast of these conversations is crucial for data practitioners seeking to guide their non-technical stakeholders and foster cross-functional collaboration. The recently released second edition of [AI in Business: Towards the Autonomous Enterprise](https://shop.bcs.org/page/detail/ai-in-business/?SF1=work_exact&ST1=AIINBUSINESS2) (BCS, 2024) aims to help decision-makers understand the strategic opportunities and challenges of AI in a business context. We asked Ed Rochead, Chair of the [Alliance for Data Science Professionals](https://alliancefordatascienceprofessionals.com/), to reflect on the themes, frameworks and case studies it offers.</center> 
 
