new article and update to old

--- a/the-pulse/posts/2025/08/04/AI-in-Bus-Review.qmd
+++ b/the-pulse/posts/2025/08/04/AI-in-Bus-Review.qmd
@@ -44,7 +44,7 @@ In one sense, each of the three sections would make a good, if short, book but, 
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
 About the author
-: [Professor Edward Rochead, M.Math (Hons), PGDip, CMath, FIMA](https://www.linkedin.com/in/prof-edward-r-17768847/) is a mathematician employed by the government, currently commissioning research in AI, Cyber and Data Science for the MOD. Ed is chair of the Alliance for Data Science Professionals, a Visiting Professor at Loughborough University, an Honorary Professor at the University of Birmingham, Chartered Mathematician, and Fellow of the IMA and RSA. 
+: [Professor Edward Rochead, M.Math (Hons), PGDip, CMath, FIMA](https://www.linkedin.com/in/prof-edward-r-17768847/) is a mathematician employed by the government, currently leading work on STEM Skills and Data. Ed is chair of the [Alliance for Data Science Professionals](https://alliancefordatascienceprofessionals.com/), a Visiting Professor at Loughborough University, an Honorary Professor at the University of Birmingham, Chartered Mathematician, and Fellow of the IMA and RSA. 
 Copyright and licence
 : &copy; 2025 Royal Statistical Society
 : Thumbnail image by [BCS](https://www.bcs.org/)
