--- a/applied-insights/case-studies/posts/2025/08/12/deploying-agentic-ai.qmd
+++ b/applied-insights/case-studies/posts/2025/08/12/deploying-agentic-ai.qmd
@@ -1,5 +1,5 @@
 ---
-title: Deploying Agentic AI: What Worked, What Broke and What We Learned
+title: Deploying Agentic AI - What Worked, What Broke, and What We Learned
 description: |
   AI scientist and researcher Francis Osei investigates what happens when Agentic AI systems are used in real projects where trust and reproducibility are not optional.   
 authors: Francis Osei 
