--- a/applied-insights/case-studies/posts/2025/08/12/deploying-agentic-ai.qmd
+++ b/applied-insights/case-studies/posts/2025/08/12/deploying-agentic-ai.qmd
@@ -1,9 +1,9 @@
 ---
 title: Deploying Agentic AI - What Worked, What Broke, and What We Learned
 description: |
-  AI scientist and researcher Francis Osei investigates what happens when Agentic AI systems are used in real projects where trust and reproducibility are not optional.   
+  AI scientist and researcher Francis Osei investigates what happens when Agentic AI systems are used in real projects, where trust and reproducibility are not optional.   
 authors: Francis Osei 
-date: 08/12/2024
+date: 08/12/2025
 image-alt: The Curated Data Enterprise Framework
 image: images/agentic-ai.jpg
 
@@ -70,7 +70,7 @@ We did not assume the agents would get everything right. The idea was to create 
 
 Figure 1 illustrates a two-phase agentic system architecture, where protocol documents are first parsed, structured, and embedded into a searchable memory (green), enabling real-time agents (orange) to classify incoming clinical data from the Clinical Trial Management System (CTMS), reason over protocol rules, detect deviations, and escalate issues with human oversight.
 
-![Figure 1: System Architecture and Agent Flow](images/figure-1-sa.jpg){#fig-cde fig-align="center"}
+![Figure 1: System Architecture and Agent Flow](images/figure-1-sa.png){#fig-cde fig-align="center"}
 
 **Where It Got Complicated**
 
@@ -163,7 +163,9 @@ That is why evaluation needs to begin with real use. With lived attempts, not co
 If agentic systems are to mature, the stories of where they struggled and how we adapted cannot sit on the sidelines. They are part of how progress happens. And they may be the clearest indicators of what needs to change next.
  
 
-
+::: {.article-btn}
+[Find more case studies](/applied-insights/case-studies/index.qmd)
+:::
 
 
 
