--- a/applied-insights/case-studies/posts/2025/08/12/deploying-agentic-ai.qmd
+++ b/applied-insights/case-studies/posts/2025/08/12/deploying-agentic-ai.qmd
@@ -70,7 +70,7 @@ We did not assume the agents would get everything right. The idea was to create 
 
 Figure 1 illustrates a two-phase agentic system architecture, where protocol documents are first parsed, structured, and embedded into a searchable memory (green), enabling real-time agents (orange) to classify incoming clinical data from the Clinical Trial Management System (CTMS), reason over protocol rules, detect deviations, and escalate issues with human oversight.
 
-![Figure 1: System Architecture and Agent Flow](images/figure-1-sa.png){#fig-cde fig-align="center"}
+![System Architecture and Agent Flow](images/figure-1-sa.png){#fig-cde fig-align="center"}
 
 **Where It Got Complicated**
 
@@ -170,8 +170,8 @@ If agentic systems are to mature, the stories of where they struggled and how we
 
 
 About the authors
-: [**Francis Osei**](https://www.linkedin.com/in/francis-osei-b2b02116a/) is the Lead Clinical AI Scientist and Researcher at Bayezian Limited, where he designs and builds intelligent systems to support clinical trial automation, regulatory compliance, and the safe, transparent use of AI in healthcare. His work brings together data science, statistical modelling, and real-world clinical insight to help organisations adopt AI they can understand, trust, and act on 
-:::
+: [**Francis Osei**](https://www.linkedin.com/in/francis-osei-b2b02116a/) is the Lead Clinical AI Scientist and Researcher at Bayezian Limited, where he designs and builds intelligent systems to support clinical trial automation, regulatory compliance, and the safe, transparent use of AI in healthcare. His work brings together data science, statistical modelling, and real-world clinical insight to help organisations adopt AI they can understand, trust, and act on. 
+
 
 ::: {.g-col-12 .g-col-md-6}
 Copyright and licence
