--- a/foundation-frontiers/posts/2025/08/22/veterinary-medicine.qmd
+++ b/foundation-frontiers/posts/2025/08/22/veterinary-medicine.qmd
@@ -17,7 +17,7 @@ image-alt: A veterinary practitioner taking notes on a herd of cows in a barn.
 
 This article had its genesis when co-author Ed’s dog, Sparkle, was treated for pneumonia in the summer of 2024. Ed, a mathematician and chair of the [Alliance for Data Science Professionals](https://alliancefordatascienceprofessionals.com/), was intrigued by the surgery's use of data in Sparkle’s treatment and decided to find out more about the use of data and AI in veterinary medicine. His exploration led to a guest appearance on the [Vet Voices on Air](https://www.vetvoices.co.uk/podcasts) podcast hosted by co-author Robyn. She is a registered veterinary nurse (RVN) and the director of [Veterinary Voices UK](https://www.vetvoices.co.uk/). Inspired by that conversation, this article explores the ways veterinary professionals are currently applying data science principles and how professions adapt and evolve in the face of these developments.  
 
-![Sparkle. Credit: Edward Rochead](images/Sparkle.png){#fig-1 fig-align="center" fig-alt="Sparkle. Credit: Edward Rochead."}
+![Sparkle Credit: Edward Rochead](images/Sparkle.png){#fig-1 fig-align="center" fig-alt="Sparkle. Credit: Edward Rochead."}
 
 The use of AI and the data science that underpins and enables it are growing in ubiquity, and one area that is embracing these approaches is veterinary medicine.  
   
