--- a/foundation-frontiers/posts/2025/08/22/veterinary-medicine.qmd
+++ b/foundation-frontiers/posts/2025/08/22/veterinary-medicine.qmd
@@ -6,7 +6,9 @@ categories:
   - AI
   - Algorithms
   - Machine Learning
-author: Robyn Lowe and Edward Rochead
+author: 
+  - Robyn Lowe
+  - Edward Rochead
 date: 08/26/2025
 toc: true
 image: images/vet.jpg
