--- a/foundation-frontiers/posts/2025/08/26/new veterinary medicine.qmd
+++ b/foundation-frontiers/posts/2025/08/26/new veterinary medicine.qmd
@@ -6,20 +6,17 @@ categories:
   - AI
   - Algorithms
   - Machine Learning
-author: 
-  - Robyn Lowe
-  - Edward Rochead
+author: Robyn Lowe and Edward Rochead
 date: 08/26/2025
-toc: true
+toc: false
 image: images/vet.jpg
 image-alt: A veterinary practitioner taking notes on a herd of cows in a barn.
 ---
 
 
-
 This article had its genesis when co-author Ed’s dog, Sparkle, was treated for pneumonia in the summer of 2024. Ed, a mathematician and chair of the [Alliance for Data Science Professionals](https://alliancefordatascienceprofessionals.com/), was intrigued by the surgery's use of data in Sparkle’s treatment and decided to find out more about the use of data and AI in veterinary medicine. His exploration led to a guest appearance on the [Vet Voices on Air](https://www.vetvoices.co.uk/podcasts) podcast hosted by co-author Robyn. She is a registered veterinary nurse (RVN) and the director of [Veterinary Voices UK](https://www.vetvoices.co.uk/). Inspired by that conversation, this article explores the ways veterinary professionals are currently applying data science principles and how professions adapt and evolve in the face of these developments.  
 
-![Sparkle Credit: Edward Rochead](images/Sparkle.png){#fig-1 fig-align="center" fig-alt="Sparkle. Credit: Edward Rochead."}
+![Sparkle. Credit: Edward Rochead](images/Sparkle.png){#fig-1 fig-align="center" fig-alt="Sparkle. Credit: Edward Rochead."}
 
 The use of AI and the data science that underpins and enables it are growing in ubiquity, and one area that is embracing these approaches is veterinary medicine.  
   
@@ -47,7 +44,7 @@ Disease monitoring and prediction are exciting because they can help us act earl
  
 An area that demonstrates compelling evidence of these positive outcomes is [farming and agriculture](https://www.skeptic.org.uk/2024/05/agr-tech-will-technology-help-or-hinder-food-production-and-animal-welfare/), where farmers are able to use AI to monitor herds, and act promptly to treat disease, before it would have been evident and notable by human monitoring. Examples, which will be explored in more detail below, include body condition technology, lameness technology, disease recognition, grazing, land and pasture management, biosensors and biochips and more. 
 
-![Technology that measures body condition each time the cow passes under the camera, reporting the changes in Body Condition Score directly to the farmer via app and online portal, helping to support individual cow treatment, group rationing and herd management.](images/herdvision1.png){#fig-2 fig-align="center" fig-alt="Technology that measures body condition each time the cow passes under the camera, reporting the changes in Body Condition Score directly to the farmer via app and online portal, helping to support individual cow treatment, group rationing and herd management."}
+![Herdvision](images/herdvision1.png){#fig-2 fig-align="center" fig-alt="Herdvision"}
 
 **Body Condition Technology** 
 The agricultural industry typically relies on subjective visual observation, human recording and manual reporting of all the key health and welfare traits, including Body Condition Score (BCS). Despite these individuals being highly skilled professionals, there is inevitable human error, paired with the constraints of busy farm management which can lead to cases getting picked up later in their disease process. BCS is a major indicator of metabolic performance in dairy cows and directly related to fertility performance and health traits. Technologies such as [Herdvision](https://herd.vision/) use a 2D and 3D camera system to monitor BCS, resulting in improvement in cattle heath and fertility, less premature culling, and savings on feeding costs.
@@ -55,7 +52,7 @@ The agricultural industry typically relies on subjective visual observation, hum
 **Lameness Technology**  
 Lameness is considered one of the [top cattle health and welfare challenges](https://www.frontiersin.org/articles/10.3389/fvets.2019.00094/full). A [2013 study](https://www.sciencedirect.com/science/article/abs/pii/S1871141313001698) noted that almost 70% of the dairy farmers expressed an intention to take action for improving dairy cow foot health. Cattle naturally mask the signs of pain, and as with body condition scoring we have relied on subjective visual observation, human recording and manual reporting of all the key health and welfare traits. Technology that can pick up lameness earlier, with more objectivity and with less labour intensity is hugely beneficial to both the animals’ health and welfare and the farm’s profitability. 
 
-![Images that produce prioritisation list for vets and hoof trimmers, ranking cows according to severity of immobility and identifying small changes in mobility and BCS before they are visible to the human eye.](images/herdvision2.png){#fig-3 fig-align="center" fig-alt="Images that produce prioritisation list for vets and hoof trimmers, ranking cows according to severity of immobility and identifying small changes in mobility and BCS before they are visible to the human eye."}
+![Herdvision](images/herdvision2.png){#fig-3 fig-align="center" fig-alt="Herdvision"}
 
 **Disease Recognition** 
 As with lameness assessments, monitoring of pain in the UK pig industry relies on human observation, either in person or via video footage, to detect disease. 
@@ -98,8 +95,7 @@ The veterinary profession may also provide benefits to the data science communit
 One vehicle for more cross-pollination could be joint conferences. A near-term opportunity is [AI (Live)](https://www.ailive.farm/) in September 2025, which aims to start the debate and establish the principles by which AI and livestock farming can derive the maximum benefits, with a focus on education, governance and application. 
 
 
-By fostering collaboration across disciplines, we can ensure that the benefits of this data revolution are shared—by all creatures, great, small, and artificial. And we are happy to report that Sparkle, whose illness sparked this article, has made a full recovery and in fact recently celebrated her ninth birthday!
-
+By fostering collaboration across disciplines, we can ensure that the benefits of this data revolution are shared—by all creatures, great, small, and artificial.
  
 
 
@@ -111,7 +107,7 @@ By fostering collaboration across disciplines, we can ensure that the benefits o
 ::: grid
 ::: {.g-col-12 .g-col-md-12}
 About the author
-: [**Robyn Lowe, BSc Hons, Dip AVN BSc Hons, Dip AVN (Surgery, Medicine, Anaesthesia) DipHE CVN, RVN, DipHE CVN, RVN**](https://www.linkedin.com/in/robyn-lowe-7274a596/), is a registered veterinary nurse and Director of [Veterinary Voices UK](https://www.vetvoices.co.uk/), a community of veterinary professionals fostering public understanding of veterinary and animal welfare issues. She hosts the organisation’s [Vet Voices on Air](https://open.spotify.com/show/2DcdmAMJrwRf2RdgUPcYCP) podcast.  
+: [**Robyn Lowe, BSc (Hons), Dip AVN, Dip HE CVN, RVN**](https://www.linkedin.com/in/robyn-lowe-7274a596/), is a registered veterinary nurse and Director of [Veterinary Voices UK](https://www.vetvoices.co.uk/), a community of veterinary professionals fostering public understanding of veterinary and animal welfare issues. She hosts the organisation’s [Vet Voices on Air](https://open.spotify.com/show/2DcdmAMJrwRf2RdgUPcYCP) podcast.  
 : [**Professor Edward Rochead, M.Math (Hons), PGDip, CMath, FIMA**](https://www.linkedin.com/in/prof-edward-r-17768847/) is a mathematician employed by the government, currently leading work on STEM Skills and Data. Ed is chair of the Alliance for Data Science Professionals, a Visiting Professor at Loughborough University, an Honorary Professor at the University of Birmingham, Chartered Mathematician, and Fellow of the IMA and RSA. 
 :::
 ::: {.g-col-12 .g-col-md-6}
@@ -123,7 +119,7 @@ Copyright and licence
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Lowe, Robyn and Rochead, Edward. 2025. "All Creatures, Great, Small, and Artificial" Real World Data Science, August 26th, 2025. [URL](https://realworlddatascience.net/foundation-frontiers/posts/2025/08/26/veterinary-medicine.html)
+: Lowe, Robyn and Rochead, Edward. 2025. "All Creatures, Great, Small, and Artificial" Real World Data Science, August 22nd, 2025. [URL](https://realworlddatascience.net/foundation-frontiers/posts/2025/08/22/veterinary-medicine.html)
 :::
 :::
 :::
