update to index

--- a/foundation-frontiers/index.qmd
+++ b/foundation-frontiers/index.qmd
@@ -21,4 +21,4 @@ listing:
 aliases: 
   - /ideas/index.html
 ---
-Our Foundations & Frontiers content is in development. Interested in contributing to Real World Data Science? [Check out our call for contributions](/contributor-docs/call-for-contributions.qmd).
+Interested in contributing to Real World Data Science? [Check out our call for contributions](https://realworlddatascience.net/the-pulse/editors-blog/posts/2025/07/07/relaunch-CFS.html).
