--- a/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.qmd
+++ b/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.qmd
@@ -38,16 +38,6 @@ I am a reader in the Artificial Intelligence Research Centre, School of Computin
 
 As a member of this editorial board, I am passionate about contributing my expertise to the development of data science and its real-world applications. I look forward to sharing my experience with others in the data science community, in particular to address ethical challenges posed by large language models and to inspire new curriculum development in the field of data science.
 
-**Sayma Chowdhury**
-
-::: {.column-margin}
-![](images/Sayma.png)
-:::
-
-I am a freelance data scientist and product designer on Upwork, with a client portfolio ranging from startups to commercial businesses such as supermarkets, charities, pharmaceuticals and automotive manufacturers. I am currently completing a MicroMasters in data, economy and development policy with MIT, before progressing on to a PhD in digital humanities. My research interests are in human-computer interaction, natural language processing and machine learning for prototyping.
-
-The RSS was instrumental in my training and professional development as a data scientist in the early stages of my career, particularly in mastering statistics and R. Data science is a rapidly growing field with employment opportunities in many sectors but there is a growing need to uphold a realistic and accurate expectation of competency within the industry. I will endeavour to present expert practical guidelines for data scientists as well as demonstrate the versatility of the profession. I hope the site will be a benchmark for academic and professional resources by expert data scientists from the industry, accessible to data scientists at all levels, anywhere in the world.
-
 **Lee Clewley** 
 
 ::: {.column-margin}
@@ -101,6 +91,18 @@ I am excited to be a member of the editorial board and look forward to seeing Re
 I am a senior technology leader, with a diverse background spanning rocket science, data science and research. I have 30 years of experience in artificial intelligence and other emerging technologies and am currently pioneering the use of AI in Ernst & Young’s tax and law practice. I’m a former member of the Open Data User Group, the Public Sector Transparency Board and the Advisory Committee to the All-Party Parliamentary Group on AI. I am a member of techUK’s leadership committee for data analytics and AI, and an honorary senior visiting fellow at The Bayes Business School in London. 
 
 I’m passionate about data science but I’m also a fierce advocate for human skills, which are as often underrated as AI is over-hyped. As a member of the editorial board, I’m keen to explore the interplay between artificial and human intelligence in businesses. I’m going to encourage all data scientists to think about the fundamentally human aspects of their work, such as trust and safety, so that we maintain perspective and proportionality in the face of ever-more sophisticated technology.
+
+**Monnie McGee** 
+
+::: {.column-margin}
+![](images/Monnie.jpeg)
+:::
+
+I received my B.A. in Mathematics and English from Austin College and completed my M.A. and Ph.D. in Statistics at Rice University. My primary research interests lie in the statistical analysis of high-throughput biological data, with emphasis on the development and application of methods for background correction, normalization, and inference procedures tailored to the unique data structures arising in technologies such as RNA-Seq, microarrays, and flow cytometry.  
+
+I have extensive expertise in the analysis of data constrained to the simplex, and my methodological contributions include the development of inference procedures for compositional data using the Nested Dirichlet Distribution. In parallel, I maintain an active research agenda in sports analytics, particularly for event-driven sports including track and field, competitive diving, swimming, and gymnastics. My work in this area focuses on ranking models, performance trajectories, and judge reliability.
+
+Most recently, I have extended my research to include applications of text analytics and natural language processing for comparing responses from various generative AI models in the context of statistical reasoning.
 
 **Detlef Nauck** 
 
