--- a/the-pulse/newsletter/index.qmd
+++ b/the-pulse/newsletter/index.qmd
@@ -5,9 +5,8 @@ subtitle: The newsletter of the Royal Statistical Society's Data Science and AI 
 description: |
   The **Data Science and AI Section** of the Royal Statistical Society is the membership group representing data and AI scientists in the UK. It was established in 2017 to ensure the long-term success of data science as a profession. To find out more about the section and its activities, visit [the RSS website](https://rss.org.uk/membership/rss-groups-and-committees/sections/data-science-section/).
 listing:
-  template: rssdsai-newsletter.ejs
   contents: rssdsai-newsletter.yml
-  fields: [date, title]
+  type: default
   sort-ui: true
   filter-ui: true
   page-size: 12
