--- a/foundation-frontiers/posts/2025/09/17/EICC_Live.qmd
+++ b/foundation-frontiers/posts/2025/09/17/EICC_Live.qmd
@@ -7,7 +7,7 @@ categories:
   - Communication
   - Skills
 
-date: 17/09/2025 # date is in mm/dd/yyyy
+date: 09/17/2025 # date is in mm/dd/yyyy
 toc: false
 image: images/ELgraphic.png
 image-alt: Graphic showing the EICC Live logo, details of the event and a woman coding on a device.
@@ -18,17 +18,16 @@ image-alt: Graphic showing the EICC Live logo, details of the event and a woman 
 
 Artificial Intelligence (AI) is transforming how we live, work, and make decisions every day – from the content we see on social media to how we’re hired, navigate to work, or how spam is filtered from our inboxes. But what exactly is AI? How does it work, where did it come from, and where is it taking us? 
 
-Dr Sophie Carr, chair of the Real World Data Science [board of editors](https://realworlddatascience.net/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.html), was joined by a panel of expert speakers to host a public lecture as part of the RSS International Conference, held in Edinburgh at the beginning of the month. 
+Dr Sophie Carr, chair of the *Real World Data Science* [board of editors](https://realworlddatascience.net/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.html), was joined by a panel of expert speakers for a public lecture in Edinburgh at the beginning of the month. 
+*Real World Data Science* [contributor](https://realworlddatascience.net/the-pulse/posts/2025/07/28/NHS-foundation-AI.html) Will Browne delivered "a hitchhiker's guide to the history of AI", taking us from the first ever algorithm (coded by "poetical scientist" Ada Lovelace) to today's large langugage models, via a counting horse and a US naval invention. 
 
-[Real World Data Science contributor](https://realworlddatascience.net/the-pulse/posts/2025/07/28/NHS-foundation-AI.html) Will Browne delivered "a hitchhiker's guide to the history of AI", taking us from the first ever algorithm, coded by "poetical scientist" Ada Lovelace, to today's large langugage models via a counting horse and a US naval invention. 
+Parwez Diloo, a data scientist at [Bays Consulting](https://baysconsulting.co.uk/), talked about how to balance technology with a human touch in recruitment processes (and the difference between maths and magic!)
 
-Parwez Diloo, a Data Scientist at Bays Consulting, talked about how to balance technology with a human touch in recruitment processes (and the difference between maths and magic!)
+And Amy Wilson, a lecturer in industrial mathematics at the University of Edinburgh, spoke about graphical modelling for decision-making in criminal contexts, touching on the legal failures of probabilistic reasoning in high profile cases like that of Lucy Letby and Amanda Knox.
 
-And Amy Wilson, a Lecturer in industrial mathematics at the University of Edinburgh, spoke about graphical modelling for decision-making in criminal cases, touching on the legal failures of probabilistic reasoning in high profile cases like that of Lucy Letby and Amanda Knox.
+The talk was rounded off by a lively Q&A session which covered the viability of AI-designed graphical models, remedies to the so-called inappropriate uses of AI, and collective action we can take to ensure AI bias does not entrench existing inequalities. 
 
-The talk was rounded off by a lively Q&A session which covered how close we are to cutting humans out of the process of creating graphical models, remedies to the so-called inappropriate uses of AI, and what collective action we can take to ensure AI bias does not entrench existing inequalities. 
-
-This talk was part of the [EICC Live](https://www.eicc.co.uk/eicc-live/) programme, a series of free public talks held by the [EEICC](https://www.eicc.co.uk/) as part of a commitment to community engagement and quality education. The talk was filmed by EICC and is published here with thanks to them. 
+This talk was part of the [EICC Live](https://www.eicc.co.uk/eicc-live/) programme, a series of free public talks held by the [EICC](https://www.eicc.co.uk/) as part of a commitment to community engagement and quality education. The talk was filmed by EICC and is published here with thanks to them. It took place at the RSS 2025 International Conference. 
 
 ::: {.g-col-12 .g-col-sm-6}
 ::: {.nav-btn}
