--- a/index.qmd
+++ b/index.qmd
@@ -122,15 +122,15 @@ toc: false
 ---
 ::: {.content-container}
 ::: {.top-story .purple-background}
-<a href="/the-pulse/editors-blog/posts/2025/07/07/editors-relaunch.qmd">
+<a href="/the-pulse/newsletter/index.qmd">
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## We're Back: Real World Data Science Relaunches
-After a brief hiatus, we're back with a new Call for Submissions.  
+## October Newsletter
+Well September certainly seemed to dissapear rapidly, as did the sun- I’m still hoping for a few warm days before the darkness kicks in! Time to sit back with some reading materials on all things Data Science and AI… 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](the-pulse/editors-blog/posts/2025/07/07/images/team.png)
+![](https://substackcdn.com/image/fetch/$s_!PxxD!,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F0708e24f-ee09-4a0f-ab3f-6f1f5672579e_2000x1144.png)
 :::
 :::
 
