--- a/contributor-docs/call-for-contributions.qmd
+++ b/contributor-docs/call-for-contributions.qmd
@@ -63,6 +63,17 @@ We recognise that LLMs and other generative AI tools are increasingly part of th
 
 Submissions can focus on any and all topics and application areas. We want our content to reflect the breadth and depth of real-world data science. 
 
+## Use of AI in Submissions 
+High-quality data is the foundation of trustworthy research. Yet, data quality is often overlooked in academic submissions. We believe this needs to change.
+
+To support a culture shift, we ask all contributors to:
+
+* Conduct and document basic data quality checks before submission.
+* Flag any known limitations or uncertainties in the dataset.
+* Include a brief statement on how data quality was assessed and maintained.
+
+By doing so, you help ensure that your findings are robust, reproducible, and valuable to the wider research community.
+
 ## Our target audience
 Real World Data Science is for all who work in data science. Submissions do not have to appeal to *all* data scientists, however. Contributors should think carefully about who they are trying to reach, and craft their submissions accordingly.
 
