--- a/foundation-frontiers/posts/2025/10/30/data-detectives.qmd
+++ b/foundation-frontiers/posts/2025/10/30/data-detectives.qmd
@@ -3,7 +3,7 @@ title: "Why We Should All Be Data Quality Detectives"
 description: |
   Data serves as the foundation of our work. So why isn’t its quality given the prominence it deserves?
 
-author: Rosemary Tate and Roger Halliday 
+author: A. Rosemary Tate and Roger Halliday 
 date: 10/30/2025
 toc: true
 image: images/thumbnail.png
@@ -84,12 +84,12 @@ About the authors
 :::
 ::: {.g-col-12 .g-col-md-6}
 Copyright and licence
-: &copy; 2025 Rosemary Tate and Roger Halliday
+: &copy; 2025 A. Rosemary Tate and Roger Halliday
 
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Tate, Rosemary and Halliday, Roger. 2025. "Why We Should All Be Data Quality Detectives" Real World Data Science, October 30, 20245. [URL](https://realworlddatascience.net/foundation-frontiers/posts/2024/10/31/data-detectives.html)
+: Tate, Rosemary A. and Halliday, Roger. 2025. "Why We Should All Be Data Quality Detectives" Real World Data Science, October 30, 20245. [URL](https://realworlddatascience.net/foundation-frontiers/posts/2024/10/31/data-detectives.html)
 :::
 :::
 :::
