--- a/index.qmd
+++ b/index.qmd
@@ -126,11 +126,11 @@ toc: false
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## October Newsletter
-Well September certainly seemed to dissapear rapidly, as did the sun- I’m still hoping for a few warm days before the darkness kicks in! Time to sit back with some reading materials on all things Data Science and AI… 
+## November Newsletter
+Well I don’t think we got my hoped for ‘Indian Summer’ as the clocks have changed in the UK and it’s suddenly dark at 4pm! Time to curl up in a comfy chair with some good reading materials on all things Data Science and AI… 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](https://substackcdn.com/image/fetch/$s_!PxxD!,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F0708e24f-ee09-4a0f-ab3f-6f1f5672579e_2000x1144.png)
+![](https://substackcdn.com/image/fetch/$s_!Suoy!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F6528139e-de82-4b0f-988d-f978dd56d47e_2802x2304.jpeg)
 :::
 :::
 
