update meet the team

--- a/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.qmd
+++ b/the-pulse/editors-blog/posts/2022/10/18/meet-the-team.qmd
@@ -72,26 +72,6 @@ Currently, I lead a business intelligence team at CHG Healthcare in the USA and 
 
 Throughout my career, I’ve built and led high-performing teams, developed data-drive solutions, and helped organizations become more analytically mature. While I enjoy the technical depth of statistical modeling, I’m most passionate about using data to solve meaningful business problems. With over 25 publications focused on practical applications, I specialize in bridging the gap between business and the broad tent of data science—helping leaders ask better questions and act on insights.
 
-**Hollie Johnson**
-
-::: {.column-margin}
-![](images/Hollie.png)
-:::
-
-I am a data scientist at the National Innovation Centre for Data (NICD), based in Newcastle upon Tyne. Following my undergraduate degree in mathematics, I worked as a software developer both in industry and as a technical research assistant in academia. I later joined the Centre for Doctoral Training in Cloud Computing for Big Data at Newcastle and obtained a PhD in topological data analysis in 2020. Now at the NICD, I specialise in transferring statistics and machine learning skills into industry, through collaborative data science projects.  
-
-I am excited to be a member of the editorial board and look forward to seeing Real World Data Science develop into a valuable source of information for aspiring data scientists and professionals alike. I would particularly encourage submissions that demonstrate the use of data science in SMEs and the non-profit sector, as well as perspectives from those with non-standard backgrounds.
-
-**Harvey Lewis** 
-
-::: {.column-margin}
-![](images/Harvey.png)
-:::
-
-I am a senior technology leader, with a diverse background spanning rocket science, data science and research. I have 30 years of experience in artificial intelligence and other emerging technologies and am currently pioneering the use of AI in Ernst & Young’s tax and law practice. I’m a former member of the Open Data User Group, the Public Sector Transparency Board and the Advisory Committee to the All-Party Parliamentary Group on AI. I am a member of techUK’s leadership committee for data analytics and AI, and an honorary senior visiting fellow at The Bayes Business School in London. 
-
-I’m passionate about data science but I’m also a fierce advocate for human skills, which are as often underrated as AI is over-hyped. As a member of the editorial board, I’m keen to explore the interplay between artificial and human intelligence in businesses. I’m going to encourage all data scientists to think about the fundamentally human aspects of their work, such as trust and safety, so that we maintain perspective and proportionality in the face of ever-more sophisticated technology.
-
 **Monnie McGee** 
 
 ::: {.column-margin}
@@ -115,6 +95,14 @@ I am a BT Distinguished Engineer and the head of AI and data science research fo
 I am a computer scientist by training and hold a PhD and a Postdoctoral Degree (Habilitation) in machine learning and data analytics. I am also a visiting professor at Bournemouth University and a private docent at the Otto-von-Guericke University of Magdeburg, Germany. I have published 3 books and over 120 papers, and I hold 15 patents and have 30 active patent applications. 
 
 I am passionate about promoting best practice in data science and believe that in the UK the RSS is the ideal professional body to pursue this goal. For me, Real World Data Science is an opportunity to share my experience and inspire a new generation of data scientists.
+
+**Debisree Ray** 
+
+::: {.column-margin}
+![](images/Debisree.png)
+:::
+
+I am  a Data Scientist at U.S. Steel / Big River Steel (acquired by Nippon Steel), where I develop data-driven solutions that span statistical analytics, visualization, predictive modeling, LLM-backed systems, and interactive dashboards to optimize steel manufacturing processes, enhance quality, and reduce losses. I hold a Ph.D. in Computational Nuclear Structure Physics and I am  passionate about AI-driven product innovation within industrial and enterprise settings. Beyond my professional role, I love collaborating with researchers in astrophysics/astronomy and nuclear structure theory to apply advanced ML/DL methodologies to academic scientific problems.  
 
 **Fatemeh Torabi**
 
