--- a/foundation-frontiers/datasciencebites/posts/2025/11/21/uncertainty.qmd
+++ b/foundation-frontiers/datasciencebites/posts/2025/11/21/uncertainty.qmd
@@ -1,62 +1,122 @@
 ---
-title: "Determining the best way to route drivers for ridesharing via reinforcement learning"
+title: "Beyond Quantification: Navigating Uncertainty in Professional AI Systems"
 description: |
-  A/B testing is often used to evaluate the impact of design 'treatments' — for example, are people who see advert A more likely to buy something than those who see advert B? Classical methods typically assume that changing one person’s treatment will not affect others, but what if that's not the case? A paper by Shi et al. aims to address this problem.  
-categories:
-  - A/B testing
-  - Reinforcement learning
-  - Statistics
-author: Brian King
-date: 12/13/2022
-image: images/paul-hanaoka-D-qq7W751vs-unsplash.jpg
-image-alt: Photo taken from the backseat of a Lyft vehicle. Driver is seen in profile to the left of the picture. Phone is mounted on the dash and displays a maps app that is tracking the route to the passenger's destination. Photo by Paul Hanaoka on Unsplash.
+   If AI is to genuinely assist professionals, it must go beyond quantification. More than simplu accurate, it should be appropriately uncertain. 
+
+author: Annie Flynn
+date: 11/21/2025
+image: images/thumb.png
+image-alt: illustration of AI uncertainty
 toc: true
-aliases: 
-  - /news-and-views/datasciencebites/posts/2022-12-13-ridesharing/ridesharing.html
-  - /news-and-views/datasciencebites/posts/2022/12/13/ridesharing.html
-  - /news-and-views/datasciencebites/posts/2022/12/13/ridesharing.qmd
-  - /ideas/datasciencebites/posts/2022/12/13/ridesharing.html
 ---
 :::{.callout-note style="margin-top: 0rem;" collapse="false"}
 ## About the paper and this post
 
-**Title:** Dynamic causal effects evaluation in A/B testing with a reinforcement learning framework
+**Title:** Beyond Quantification: Navigating Uncertainty in Professional AI Systems
 
-**Author(s) and year:** Chengchun Shi, Xiaoyu Wang, Shikai Luo, Hongtu Zhu, Jieping Ye, Rui Song (2022)
+**Author(s) and year:** Sylvie Delacroix1, Diana Robinson, Umang Bhatt, Jacopo Domenicucci1, Jessica Montgomery, Gaël Varoquaux, Carl Henrik Ek, Vincent Fortuin, Yulan He, Tom Diethe, Neill Campbell, Mennatallah El-Assady, Søren Hauberg, Ivana Dusparic12 and Neil D. Lawrenceg (2025)
 
-**Status:** Published in *Journal of the American Statistical Association, Theory and Methods*, open access: [HTML](https://www.tandfonline.com/doi/full/10.1080/01621459.2022.2027776), [PDF](https://www.tandfonline.com/doi/epdf/10.1080/01621459.2022.2027776?needAccess=true&role=button), [EPUB](https://www.tandfonline.com/doi/epub/10.1080/01621459.2022.2027776?needAccess=true&role=button). 
-
-**Editor's note:** This post is republished with permission from [MathStatBites](https://mathstatbites.org/determining-the-best-way-to-route-drivers-for-ridesharing-via-reinforcement-learning/) to demonstrate the Bites concept. See [here](/contributor-docs/datasciencebites.qmd) for more information.
+**Status:** Published in *RSS: Data Science and Artificial Intelligence*, open access: [HTML](https://academic.oup.com/rssdat/article/1/1/udaf002/8317136)
 :::
+As artificial intelligence systems—especially large language models (LLMs)—become woven into everyday professional practice, they increasingly influence sensitive decisions in healthcare, education, and law. These tools can draft medical notes, comment on student essays, propose legal arguments, and summarise complex documents. But while AI can now answer many questions confidently, professionals know that confidence is not always what matters most.
 
-Companies often want to test the impact of one design decision over another, for example Google might want to compare the current ranking of search results (version A) with an alternative ranking (version B) and evaluate how the modification would affect users’ decisions and click behavior. An experiment to determine this impact on users is known as an A/B test, and many methods have been designed to measure the "treatment" effect of the proposed change.  However, these classical methods typically assume that changing one person’s treatment will not affect others (known as the Stable Unit Treatment Value Assumption or SUTVA). In the Google example, this is typically a valid assumption — showing one user different search results shouldn’t impact another user’s click behavior. But in some situations, SUTVA is violated, and new methods must be introduced to properly measure the effect of design changes. 
+Consider a doctor who suspects a patient may be experiencing domestic abuse, or a teacher trying to distinguish between a student’s misunderstanding and a culturally shaped interpretation of a text. These are situations where uncertainty isn’t just about missing data—it’s about interpretation, ethics, and human judgment.
 
-One such situation is that of ridesharing companies (Uber, Lyft, etc.) and how they determine which drivers are sent to which riders (the dispatch problem). Simply put, when a driver is assigned to a rider, this decision impacts the spatial distribution of drivers in the future. Hence the dispatch strategy (our treatment) at the present time will influence riders and drivers in the future, which violates SUTVA and hence invalidates many traditional methods for A/B testing. To tackle this problem, a group of researchers have recently employed a reinforcement learning (RL) framework which can accurately measure the treatment effect in such a scenario. Furthermore, their proposed approach allows for companies to terminate A/B tests earlier if the proposed version B is found to be clearly better. This early stopping can save time and money.
+Yet much current AI research focuses on quantifying uncertainty: assigning probability scores, confidence levels, or error bars. The authors of this paper argue that while such numbers help in some cases, they miss the forms of uncertainty that truly matter in professional decision-making. If AI systems rely only on numeric confidence, they risk eroding the very expertise they aim to support.
 
-To better understand RL and how it can contribute to tackling the issue at hand, it’s first helpful to set some context.  In typical RL problems, including the one in this paper, the scenario is modeled with something known as a Markov Decision Process (MDP). A MDP links three sets of variables across time: the state or environment, the treatment or action (the reaction to the environment), and the outcome (the response produced by the environment due to the action). These outcomes can be thought of as rewards which depend on the action taken and the state observed. Over time, the machine learns which actions produce more positive rewards and which bring about worse outcomes. Hence, the actions leading to higher rewards are positively reinforced, thus the name reinforcement learning. A causal diagram of an MDP is shown in Figure 1, where *S*~*t*~, *A*~*t*~, and *Y*~*t*~ are the **state**, **action**, and **outcome** at time *t*. As one can see, past treatments influence future outcomes by altering the state variables at the present (the so-called “carryover effect” which violates SUTVA).
+This paper asks a simple but transformative question: **What if uncertainty isn’t always something to quantify, but something to communicate?**
+
+## Why quantification isn’t enough
+
+The authors highlight a fundamental mismatch between the way today’s AI systems handle uncertainty and the way real professionals experience it.
+They distinguish between:
+* Epistemic uncertainty – when we simply don’t know enough yet (e.g., missing data, incomplete measurements). *This can often be quantified.*
+* Hermeneutic uncertainty – when a situation allows multiple legitimate interpretations, often shaped by culture, ethics, or context. *This cannot meaningfully be reduced to a percentage.*
 
 ::: {.column-page}
-![](images/ridesharing-fig1.png){fig-alt="A causal diagram of a Markov Decision Process is shown in this figure. Green circles represent states, with arrows leading to red diamonds and blue squares representing, respectively, actions and outcomes. Actions are linked to new states by arrows, and prior states are linked to new states by curved arrows. This illustration conveys how past treatments influence future outcomes by altering the state variables at the present (the so-called “carryover effect” which violates the stable unit treatment value assumption)."}
-:::
-::: {.column-margin}
-**Figure 1:** Causal diagram of MDP, where the solid lines represent causal relationships.
+![](images/uncertaintykinds.png)
 :::
 
-Making this more concrete, consider an example where the decision-maker is a ridesharing company.  The environment or **state** is whatever variables the decision-maker can measure about the world, like the spatial distribution of drivers, number of pickup requests, traffic, and weather. The company then makes some **action** on how to dispatch drivers. The combination of the state and action leads to an **outcome** that can be measured, for example passenger waiting time or driver’s income. The strategy which is used to determine an action is known as a policy. This policy could be designed to take the state into account or simply be fixed regardless of what environment is encountered. Much of the reinforcement learning literature focuses on the former (policies that depend on the state), but the authors argue that fixed designs are the de facto approach in industry A/B testing and hence they focus on that setting. In particular, a common treatment allocation design is the switchback design, where there are two policies of interest (the current dispatching strategy vs a proposed strategy) determined ahead of time and they are employed in alternating time intervals during the A/B test.
+Professional judgment often depends on this second kind. Teachers, doctors, and lawyers rely on tacit skills: subtle perceptions, ethical intuitions, and context-sensitive interpretation. AI systems trained on statistical patterns struggle to reflect this nuance.
 
-So how are policies compared to determine the treatment effect? The answer lies in what is known as the value function, which measures the total outcome that would have amassed had the decision-maker followed a given policy. The value function can put more value on short-term gain in outcome or long-term benefits. The two policies in an A/B test each have their own value functions, and a proposed policy is determined to be better if its value is (statistically) significantly higher. In the ridesharing setting, one possible outcome of interest is driver income. An A/B test in that scenario would thus look to see if a proposed policy had greater expected driver income vs the current policy.
+When an AI model gives a probability score—“I’m 70% sure this infection is bacterial”—it communicates something useful. But if the real uncertainty stems from ethical or contextual complexity (e.g., whether asking a patient certain questions might put them at risk), probability scores offer a false sense of clarity.
 
-A natural question is when to end the experiment and test for a difference in value. In practice, companies will often simply run the test for a prespecified amount of time, such as two weeks, and then perform an analysis. But if one policy is clearly better than another, that difference could be detectable much earlier and the company is wasting valuable resources by continuing the experiment. To address this issue, the authors take an idea from clinical trials, the "alpha-spending" approach, and adapt it to their framework. Alpha-spending is one way to distribute over time the prespecified "budget" of Type 1 error (the probability of falsely detecting that a new policy is better). In the article’s real-data example, the authors test once a day for each day after one week and are able to detect a significant difference on Day 12. Waiting until Day 14 would have resulted in poorer outcomes since a suboptimal policy would be implemented half the time for two more days.
+The paper gives practical examples:
+* A medical AI might be highly confident about symptoms but blind to the social dynamics suggesting abuse.
+* An educational AI may accurately flag grammar issues but miss culturally sensitive interpretations in a student essay.
 
-Overall, the framework introduced allows for handling of carryover effects, is capable of modeling treatment allocation like the switchback design, and furthermore, allows for possible early stopping. With these three features, the authors argue their approach is highly applicable to the current practice of ridesharing companies (and possibly other industries as well). For interested readers wanting to dive deeper into the methodology presented, you can check out the [full article](https://www.tandfonline.com/doi/full/10.1080/01621459.2022.2027776), listen to the first author discuss the material at the [Online Causal Inference Seminar](https://www.youtube.com/watch?v=Zor1CmRyycw) (embedded below), or explore the [Python implementation](https://github.com/callmespring/CausalRL) available on GitHub.
+In both cases, the most important uncertainties are precisely the ones that cannot be captured by numbers.
 
-{{< video https://www.youtube.com/embed/Zor1CmRyycw >}}
+## Why this matters now
+
+The authors warn that the problem becomes even more serious as we move toward agentic AI systems—multiple AI agents interacting and making decisions together. If one system miscommunicates uncertainty, the error may ripple through an entire network.
+
+To address this, the authors propose shifting away from trying to algorithmically “solve” uncertainty, and instead enabling professionals themselves to shape how AI expresses it.
+
+##Takeaways and implications
+
+**1. Uncertainty expression is part of professional expertise, not just a technical feature**
+
+AI should not simply output probabilities. It should help preserve and enhance the ways professionals reason through complex, ambiguous situations. That means:
+* highlighting when interpretation is required
+* surfacing multiple plausible perspectives
+* signalling when ethical judgment is involved
+* encouraging expanded inquiry rather than false certainty
+
+For example, instead of producing a diagnosis score, an AI assistant might say: “This pattern warrants attention to social context. Consider asking open-ended questions to understand the patient’s circumstances.”
+
+This kind of prompting respects and supports professional judgment.
+
+**2. Professionals—not engineers—must define how uncertainty is communicated**
+
+The authors propose participatory refinement, a process where communities of practitioners (teachers, doctors, judges, etc.) collectively shape:
+* the categories of uncertainty that matter in their field
+* the language and formats AI systems should use
+* how these systems should behave in ethically sensitive scenario
+
+This differs from typical user feedback loops. Instead of individuals clicking “thumbs down,” whole professions deliberate on what kinds of uncertainty an AI system should express and how.
+
+**3. This requires new technical and organisational approaches**
+
+::: {.column-page}
+![](images/futureai.png)
+:::
+
+
+To make participatory refinement possible, future AI systems need:
+* architectures that can incorporate community-defined uncertainty frameworks
+* interfaces designed for collective sense-making, not just individual use
+* institutional support (e.g., workshops, governance processes, professional committees)
+
+While this takes more time than simply deploying an AI system “out of the box,” the authors argue that in fields like healthcare or law, these deliberative processes are essential, not optional.
+
+**4. Preserving “productive uncertainty” is key for ethical, adaptive professional practice**
+
+If AI tools flatten complex uncertainty into simple numbers, they may unintentionally narrow the space for professional judgment and ethical debate. The authors suggest that sustained ambiguity—open questions, competing interpretations, ethical reflection—is not a flaw in human reasoning but a feature of high-quality professional work.
+
+Well-designed AI should help maintain that reflective space, not close it down.
+
+**Further reading**
+
+For readers interested in exploring more:
+* David Spiegelhalter – The Art of Uncertainty (accessible introduction to uncertainty in science)
+* Iris Murdoch – The Sovereignty of Good (on moral perception)
+* Participatory AI frameworks such as STELA (Bergman et al., 2024)
+* Visual analytics research on human-in-the-loop data interpretation
+* Discussions of agentic AI systems and coordinated AI in healthcare
+* Delacroix’s work on LLMs in ethical and legal decision-making
+
+
+In summary
+This paper argues that if AI is to genuinely assist professionals, it must go beyond quantification. Numbers alone cannot capture the ethical, interpretive, and contextual uncertainties that define professional practice. Instead, AI should help preserve and enrich human judgment by communicating uncertainty in ways co-designed with the communities who rely on it.
+AI should not just be *accurate* —it should be *appropriately uncertain*.
+
 
 ::: {.further-info}
 ::: grid
 ::: {.g-col-12 .g-col-md-6}
 About the author
-: **Brian King** is a PhD candidate in the Department of Statistics at Rice University and a current NSF Graduate Research Fellow, with research focused on Bayesian modeling and forecasting for time series of counts. Prior to Rice, he graduated from Baylor University with a B.S. in Mathematics and Statistics alongside a secondary major in Spanish and a minor in Computer Science.
+: **Annie Flynn** is Head of Content at the RSS. 
 :::
 
 ::: {.g-col-12 .g-col-md-6}
