--- a/foundation-frontiers/datasciencebites/posts/2025/11/21/uncertainty.qmd
+++ b/foundation-frontiers/datasciencebites/posts/2025/11/21/uncertainty.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Beyond Quantification: Navigating Uncertainty in Professional AI Systems"
 description: |
-   If AI is to genuinely assist professionals, it must go beyond quantification. More than simplu accurate, it should be appropriately uncertain. 
+   If AI is to genuinely assist professionals, it must go beyond quantification. More than simply accurate, it should be appropriately uncertain. 
 
 author: Annie Flynn
 date: 11/21/2025
@@ -14,7 +14,7 @@ toc: true
 
 **Title:** Beyond Quantification: Navigating Uncertainty in Professional AI Systems
 
-**Author(s) and year:** Sylvie Delacroix1, Diana Robinson, Umang Bhatt, Jacopo Domenicucci1, Jessica Montgomery, Gaël Varoquaux, Carl Henrik Ek, Vincent Fortuin, Yulan He, Tom Diethe, Neill Campbell, Mennatallah El-Assady, Søren Hauberg, Ivana Dusparic12 and Neil D. Lawrenceg (2025)
+**Author(s) and year:** Sylvie Delacroix, Diana Robinson, Umang Bhatt, Jacopo Domenicucci, Jessica Montgomery, Gaël Varoquaux, Carl Henrik Ek, Vincent Fortuin, Yulan He, Tom Diethe, Neill Campbell, Mennatallah El-Assady, Søren Hauberg, Ivana Dusparic12 and Neil D. Lawrence (2025)
 
 **Status:** Published in *RSS: Data Science and Artificial Intelligence*, open access: [HTML](https://academic.oup.com/rssdat/article/1/1/udaf002/8317136)
 :::
