--- a/foundation-frontiers/posts/2025/11/27/MHF-interview.qmd
+++ b/foundation-frontiers/posts/2025/11/27/MHF-interview.qmd
@@ -124,7 +124,7 @@ Copyright and licence
 :::
 ::: {.g-col-12 .g-col-md-6}
 How to cite
-: Flynn, Annie 2025. "AI for Social Good: Interviewing with the Founder of the Mike Hudson Foundation," Real World Data Science, November 27, 2025. [URL](https://realworlddatascience.net/foundation-frontiers/posts/2024/10/31/MHF-interview.html)
+: Flynn, Annie 2025. "AI for Social Good: Interview with the Founder of the Mike Hudson Foundation," Real World Data Science, November 27, 2025. [URL](https://realworlddatascience.net/foundation-frontiers/posts/2025/11/27/MHF-interview.html)
 :::
 :::
 :::
