--- a/index.qmd
+++ b/index.qmd
@@ -126,11 +126,11 @@ toc: false
 
 ::: grid
 ::: {.g-col-12 .g-col-lg-4 .top-story-text}
-## November Newsletter
-Well I don’t think we got my hoped for ‘Indian Summer’ as the clocks have changed in the UK and it’s suddenly dark at 4pm! Time to curl up in a comfy chair with some good reading materials on all things Data Science and AI… 
+## December Newsletter
+Although listening in to the Ashes in Australia reminds you the sun does still exist, dark, cold and wet seems to be the norm for the festive season in London! Time to find a warm spot by the fire with some good reading materials on all things Data Science and AI… 
 :::
 ::: {.g-col-12 .g-col-lg-8 .top-story-img}
-![](https://substackcdn.com/image/fetch/$s_!Suoy!,w_1456,c_limit,f_webp,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2F6528139e-de82-4b0f-988d-f978dd56d47e_2802x2304.jpeg)
+![](https://substackcdn.com/image/fetch/$s_!IKyM!,f_auto,q_auto:good,fl_progressive:steep/https%3A%2F%2Fsubstack-post-media.s3.amazonaws.com%2Fpublic%2Fimages%2Ff67b5d95-34a4-4ebf-b705-b0337b832157_1310x738.png)
 :::
 :::
 
